fiz alteração no index.html e no main.css

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>Portfólio da Empresa</title>
+    <title>Portifólio da Empresa</title>
 </head>
 
 <body>
 
     <header>
-        <h1>Pórtifolio</h1>
+        <h1>Portifólio</h1>
         <p>CNPJ: 44.765.091/0001-21</p>
         <p>DERRUBANDO BARREIRAS PARA CONSTRUÇÕES DE SONHOS</p>
 
